cambio de prueba

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
 		<a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a> | 
 		<a routerLink="/usuarios" routerLinkActive="active">Usuarios</a> | 
 		<a routerLink="/productos" routerLinkActive="active">Productos</a> | 
-		<a routerLink="/about" routerLinkActive="active">About</a>
+		<a routerLink="/about" routerLinkActive="active">About - prueba</a>
 	</nav>
 	<nav class="col-4 text-right social">
 		<a href="http://github.com"><i class="fa fa-github" aria-hidden="true"></i></a> 
